# ChangeLog for net-wireless/kbluetooth
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/kbluetooth/Attic/ChangeLog,v 1.12 2010/08/09 11:38:11 ssuominen Exp $

  09 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  kbluetooth-0.4.2.ebuild:
  Remove KDE 4.3.x support from deps.

  18 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  kbluetooth-0.4.2.ebuild:
  x86 stable wrt #316667. Thanks to Thomas Kahle for testing.

  03 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  kbluetooth-0.4.2.ebuild:
  amd64 stable wrt #316667

*kbluetooth-0.4.2 (21 Feb 2010)

  21 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +kbluetooth-0.4.2.ebuild:
  Version bump.

*kbluetooth-0.4.1 (10 Feb 2010)

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +kbluetooth-0.4.1.ebuild:
  Version bump.

  03 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> kbluetooth-0.4.ebuild:
  Don't depend on libknotificationitem with KDE 4.4.x.

*kbluetooth-0.4 (02 Feb 2010)

  02 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +kbluetooth-0.4.ebuild:
  Version bump.

  31 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  kbluetooth-0.4_rc2.ebuild:
  Don't enable semantic-desktop by default (following KDE 4.3.5).

  12 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  kbluetooth-0.4_rc2.ebuild:
  Fix solidcontrol linking.

*kbluetooth-0.4_rc2 (12 Nov 2009)

  12 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +kbluetooth-0.4_rc2.ebuild:
  Version bump.

  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  kbluetooth-0.4_rc1.ebuild:
  Since bluez can't work as normal user, warn people about it wrt bug
  #279616.

*kbluetooth-0.4_rc1 (15 Oct 2009)

  15 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +kbluetooth-0.4_rc1.ebuild:
  Initial commit wrt #286316, thanks to Andreas Eckstein for initial ebuild.
