@@ -1,4 +1,4 @@
 DIST 112110-kbluetooth-0.4.2.tar.bz2 107142 RMD160 5be2d7cd9858168ff1ebf6920b2ce4a9ecfc3564 SHA1 12dbf16872601c7206996347ed77672448b7609c SHA256 e5feb2686ac18722e5bfa5338105193e209203a63181d6067c3bbc73cca5ac7c
-EBUILD kbluetooth-0.4.2.ebuild 1202 RMD160 4a97bc58232c5c30019117840360cf22101ede3e SHA1 ecfedfa5296555376d8428abdda955febd7bc794 SHA256 be19f3426745076bf449016006677129275d994b827609e203a4ddd8c6931e6b
-MISC ChangeLog 1884 RMD160 e10708a15244a73acfdbb808051e9c98923e19ff SHA1 6f2baa503dd89e40c7d4c414206c29aa84f0d510 SHA256 77972dd916e41e5c163c9445b9ca97e547ed50af90f64c4c349c39fedd1ffcbf
+EBUILD kbluetooth-0.4.2.ebuild 1158 RMD160 d2484c396814840593cff4c7ee6692e728a4512b SHA1 5bcefddcce279feb28cc287c14a84b60d404f853 SHA256 7ddaa2f9185abba6c6e15950b23c0bf9462a1c209ca75622eb6b725e807be1c0
+MISC ChangeLog 2002 RMD160 ec25cc3bcad32f6925ba942233ad1870e147d85c SHA1 3639eeb830651cf50f56d23d5b193ef22d337084 SHA256 45ec987629eebb38e6d79f9e949084db482d4a4dcee050df2181269d70fe3dee
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
