@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/kbluetooth
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/kbluetooth/Attic/ChangeLog,v 1.12 2010/08/09 11:38:11 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/kbluetooth/Attic/ChangeLog,v 1.13 2010/08/09 15:44:04 reavertm Exp $
+
+  09 Aug 2010; Maciej Mrozowski <reavertm@gentoo.org>
+  kbluetooth-0.4.2.ebuild:
+  Remove unnecessary KDE_MINIMAL, QA
 
   09 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
   kbluetooth-0.4.2.ebuild:
